# bare-server-python

./: .editorconfig  README.md  TODO.xit  bare-server.json  main.py  pyproject.toml
